# pacreason

./: Cargo.toml  LICENSE-MIT  PKGBUILD  README.md  pacreason-postinstall.hook  pacreason-preinstall.hook  pacreason.1  pacreason.install
src/: lib.rs
