[package]
name = "pacreason"
version = "0.1.1"
edition = "2021"
description = "Remember why you installed a package"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zombiepigdragon/pacreason/"
keywords = ["archlinux", "arch", "pacman"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["cargo"] }
